[tool.poetry]
name = "mlcode"
version = "0.1.0"
description = ""
authors = ["Arrowzi <boriska1995.02@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
keras = "^2.8.0"
torch = "^1.11.0"
Pillow = "^9.1.0"
opencv-python = "^4.5.5"
ipython = "^8.3.0"
ipykernel = "^6.13.0"
tensorflow = "^2.8.0"
torchvision = "^0.12.0"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
